force-app/main/default/objects/AdviceChecklist__c/fields/Modelling4EyeCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>Modelling4EyeCompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelling 4 Eye Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advice_Checklists3</relationshipName>
    <type>Lookup</type>
</CustomField>