force-app/main/default/objects/AdviceChecklist__c/fields/NarrativePartnerReviewChangesNeeded__c.field-meta.xml
<CustomField>
    <fullName>NarrativePartnerReviewChangesNeeded__c</fullName>
    <label>Changes needed from partner review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>