force-app/main/default/objects/AdviceChecklist__c/fields/NarrativePeerReview__c.field-meta.xml
<CustomField>
    <fullName>NarrativePeerReview__c</fullName>
    <description>Used for recording notes on the narrative by a planner</description>
    <label>Narrative peer review</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>