force-app/main/default/objects/AdviceChecklist__c/fields/NewAdviceCreated__c.field-meta.xml
<CustomField>
    <fullName>NewAdviceCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New advice created</label>
    <type>Checkbox</type>
</CustomField>