force-app/main/default/objects/AdviceChecklist__c/fields/NewDealSetupIfRequired__c.field-meta.xml
<CustomField>
    <fullName>NewDealSetupIfRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use unclear</description>
    <label>New deal set up (if required)</label>
    <type>Checkbox</type>
</CustomField>