force-app/main/default/objects/AdviceChecklist__c/fields/NonStandardAdviceFeeApproved__c.field-meta.xml
<CustomField>
    <fullName>NonStandardAdviceFeeApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All non-standard fees must be approved by Joseph McLean via chatter either on the household or on the advice. If not visible, please request from partner/Joseph.</inlineHelpText>
    <label>Non-Standard Advice Fee Approved?</label>
    <type>Checkbox</type>
</CustomField>