force-app/main/default/objects/AdviceChecklist__c/fields/NonStandardAdviceFeeConsidered__c.field-meta.xml
<CustomField>
    <fullName>NonStandardAdviceFeeConsidered__c</fullName>
    <description>Records if non standard fees have been considered</description>
    <inlineHelpText>Non-standard advice fees defined as anything other than £2,000 setup fee &amp; 1% transfer fees &amp; standard ongoing tiering.</inlineHelpText>
    <label>Non-standard advice fee considered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>