force-app/main/default/objects/AdviceChecklist__c/fields/NonStandardAdviceFeeNotes__c.field-meta.xml
<CustomField>
    <fullName>NonStandardAdviceFeeNotes__c</fullName>
    <inlineHelpText>All non-standard fees must be approved by Joseph McLean via chatter either on the household or on the advice. If not visible, please request from partner/Joseph. This field should confirm rationale and date of approval.</inlineHelpText>
    <label>Non-standard advice fee notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>