force-app/main/default/objects/AdviceChecklist__c/fields/NonStandConfirmCorrectRetirementAge__c.field-meta.xml
<CustomField>
    <fullName>NonStandConfirmCorrectRetirementAge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm correct retirement age</label>
    <type>Checkbox</type>
</CustomField>