force-app/main/default/objects/AdviceChecklist__c/fields/NonStandCriticalYieldAnnuityQuotesLinked__c.field-meta.xml
<CustomField>
    <fullName>NonStandCriticalYieldAnnuityQuotesLinked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Critical yield &amp; annuity quotes linked in Salesforce?</inlineHelpText>
    <label>Critical yield &amp; annuity quotes linked?</label>
    <type>Checkbox</type>
</CustomField>