force-app/main/default/objects/AdviceChecklist__c/fields/NonStandCriticalYieldCalcsAnnuityQuotes__c.field-meta.xml
<CustomField>
    <fullName>NonStandCriticalYieldCalcsAnnuityQuotes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Critical yield calculations &amp; annuity quotes completed?</inlineHelpText>
    <label>Critical Yield Calcs/Annuity Quotes?</label>
    <type>Checkbox</type>
</CustomField>