force-app/main/default/objects/AdviceChecklist__c/fields/NonStandIsDrawdownIllustrationRequired__c.field-meta.xml
<CustomField>
    <fullName>NonStandIsDrawdownIllustrationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to drive orchestration task automation</description>
    <inlineHelpText>This should be requested for existing or new drawdown (including transferring crystallised benefits, regardless if they&#39;re going to be taking additional income).</inlineHelpText>
    <label>Is a drawdown illustration required?</label>
    <type>Checkbox</type>
</CustomField>