force-app/main/default/objects/AdviceChecklist__c/fields/NonStandValueTransferValuesBeingUsed__c.field-meta.xml
<CustomField>
    <fullName>NonStandValueTransferValuesBeingUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Confirm correct value/transfer values being used (as of the correct date and used elsewhere)</inlineHelpText>
    <label>Transfer values being used</label>
    <type>Checkbox</type>
</CustomField>