force-app/main/default/objects/AdviceChecklist__c/fields/NonStandYieldQuotesConsistentWithAdvice__c.field-meta.xml
<CustomField>
    <fullName>NonStandYieldQuotesConsistentWithAdvice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Confirm critical yield &amp; annuity quotes are consistent with the advice (if not, refer to senior planner)</inlineHelpText>
    <label>Yield &amp; quotes consistent with advice</label>
    <type>Checkbox</type>
</CustomField>