force-app/main/default/objects/AdviceChecklist__c/fields/NotableUpdatesAndAssumptionsUsed__c.field-meta.xml
<CustomField>
    <fullName>NotableUpdatesAndAssumptionsUsed__c</fullName>
    <description>List material changes to Lifeline since the last model (i.e. anything that will be needed by the planner next time modelling is required, deviations from default assumptions, details of any calculations &amp; complex modelling etc)</description>
    <inlineHelpText>List material changes to Lifeline since the last model (i.e. anything that will be needed by the planner next time modelling is required, deviations from default assumptions, details of any calculations &amp; complex modelling etc)</inlineHelpText>
    <label>Notable updates/assumptions used (LL)</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>