force-app/main/default/objects/AdviceChecklist__c/fields/OngoingFeeInstructions__c.field-meta.xml
<CustomField>
    <fullName>OngoingFeeInstructions__c</fullName>
    <description>Confirm charging structure to be applied (new clients)/already applied (existing clients). General guidance for ongoing advice fees can be found in planner manual (fees &gt; ongoing advice fee).</description>
    <inlineHelpText>Confirm charging structure to be applied (new clients)/already applied (existing clients). General guidance for ongoing advice fees can be found in planner manual (fees &gt; ongoing advice fee).</inlineHelpText>
    <label>Ongoing fee instructions</label>
    <type>TextArea</type>
</CustomField>