force-app/main/default/objects/AdviceChecklist__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Use unclear</description>
    <label>Other</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>