force-app/main/default/objects/AdviceChecklist__c/fields/OtherAdvice__c.field-meta.xml
<CustomField>
    <fullName>OtherAdvice__c</fullName>
    <description>Any other recommendations not covered by other sections</description>
    <label>Other advice (EoWs, Wills, LPAs etc)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>