force-app/main/default/objects/AdviceChecklist__c/fields/OtherPointsToIncludeInSuitability__c.field-meta.xml
<CustomField>
    <fullName>OtherPointsToIncludeInSuitability__c</fullName>
    <description>Anything else to be included/considered in the suitability deck not covered by the other sections. E.g. Wills &amp; LPAs, SP forecasts &amp; NICs, DB benefits summary, misc supporting calculations, signpost first/annual review, signpost mortgage advice/review, any other relevant insights. Also outline client information prompts/requests e.g. providing missing documentation, clarification on info received, etc. You should also make a note here of any AML/SoF documentation that is needed/still outstanding</description>
    <inlineHelpText>Outline anything else to be included/considered in the suitability deck not covered by the other sections. E.g. Wills &amp; LPAs, SP forecasts &amp; NICs, DB benefits summary, misc supporting calculations, signpost first/annual review, signpost mortgage advice/review, any other relevant insights. Also outline client information prompts/requests e.g. providing missing documentation, clarification on info received, etc. You should also make a note here of any AML/SoF documentation that is needed/still outstanding</inlineHelpText>
    <label>Other points to include in suitability</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>