force-app/main/default/objects/AdviceChecklist__c/fields/OtherSoftFacts__c.field-meta.xml
<CustomField>
    <fullName>OtherSoftFacts__c</fullName>
    <description>Unused</description>
    <label>Other soft facts</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>