force-app/main/default/objects/AdviceChecklist__c/fields/OutlineChangesMade__c.field-meta.xml
<CustomField>
    <fullName>OutlineChangesMade__c</fullName>
    <description>Use unclear</description>
    <label>Outline changes made</label>
    <type>TextArea</type>
</CustomField>