force-app/main/default/objects/AdviceChecklist__c/fields/PartnerApproved__c.field-meta.xml
<CustomField>
    <fullName>PartnerApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use unclear</description>
    <label>Partner approved</label>
    <type>Checkbox</type>
</CustomField>