force-app/main/default/objects/AdviceChecklist__c/fields/PartnerChanges__c.field-meta.xml
<CustomField>
    <fullName>PartnerChanges__c</fullName>
    <description>Space for the partner to respond to the narrative and outline any misinformation/changes you feel need to be addressed. The suitability planner will either implement the change or chatter you for further discussion.</description>
    <inlineHelpText>You should use this field to respond to the narrative and outline any misinformation/changes you feel need to be addressed. The suitability planner will either implement the change or chatter you for further discussion.</inlineHelpText>
    <label>Partner changes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>