force-app/main/default/objects/AdviceChecklist__c/fields/PartnerCommentsResolved__c.field-meta.xml
<CustomField>
    <fullName>PartnerCommentsResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Partner comments resolved</label>
    <type>Checkbox</type>
</CustomField>