force-app/main/default/objects/AdviceChecklist__c/fields/PartnerCommentsToResolve__c.field-meta.xml
<CustomField>
    <fullName>PartnerCommentsToResolve__c</fullName>
    <description>Captures whether there are partner comments to resolve in the checklist.</description>
    <label>Comments to resolve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>