force-app/main/default/objects/AdviceChecklist__c/fields/PartnerReviewCompleted__c.field-meta.xml
<CustomField>
    <fullName>PartnerReviewCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once you mark this as complete the following task will generate in Salesforce for the suitability planner: Update narrative</inlineHelpText>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>