force-app/main/default/objects/AdviceChecklist__c/fields/PeerReviewCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>PeerReviewCompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records which planner completed the review of the narrative</description>
    <label>Peer review completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advice_Checklists2</relationshipName>
    <type>Lookup</type>
</CustomField>