force-app/main/default/objects/AdviceChecklist__c/fields/PensionReviewAdvice__c.field-meta.xml
<CustomField>
    <fullName>PensionReviewAdvice__c</fullName>
    <description>Used to outline the review of and subsequent recommendations for clients&apos; existing pensions.

DC pensions should include: plan status e.g. active/paid up, penalties or guarantees, ongoing contributions, TFC, retirement options including nominee drawdown, total charges vs NOVA, can adviser charging be added, EOW, investment options, current equity content e.g. c90%, other factors.</description>
    <inlineHelpText>This section should be used to outline the review of and subsequent recommendations for clients&apos; existing pensions.

DC pensions should include: plan status e.g. active/paid up, penalties or guarantees, ongoing contributions, TFC, retirement options including nominee drawdown, total charges vs NOVA, can adviser charging be added, EOW, investment options, current equity content e.g. c90%, other factors.</inlineHelpText>
    <label>Pension review advice</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>