force-app/main/default/objects/AdviceChecklist__c/fields/PensionsInvestmentsReviewedUnder2k__c.field-meta.xml
<CustomField>
    <fullName>PensionsInvestmentsReviewedUnder2k__c</fullName>
    <description>Used to outline the review of and subsequent recommendations for clients&#39; existing products valued below £5k.</description>
    <inlineHelpText>This section should be used to outline the review of and subsequent recommendations for clients&#39; existing products valued below £5k. Guidance can be found in planner manual (Small product process).</inlineHelpText>
    <label>Pensions/investments reviewed under £5k</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>