force-app/main/default/objects/AdviceChecklist__c/fields/PersonalProtectionHouse__c.field-meta.xml
<CustomField>
    <fullName>PersonalProtectionHouse__c</fullName>
    <defaultValue>&quot;https://docs.google.com/document/d/1_Iv7xjldy6KqDPZ1baEn6ynXpcOhbMZImAX3EatFo4s/edit&quot;</defaultValue>
    <description>Use unclear</description>
    <label>Personal protection house</label>
    <type>Url</type>
</CustomField>