force-app/main/default/objects/AdviceChecklist__c/fields/PhasingInstructions__c.field-meta.xml
<CustomField>
    <fullName>PhasingInstructions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If there is a phasing recommendation, ensure that the phasing insight slides are included within the deck. Ensure the recommendation wording reflects phasing/direct investment as per narrative.</inlineHelpText>
    <label>Phasing Instructions</label>
    <type>Checkbox</type>
</CustomField>