force-app/main/default/objects/AdviceChecklist__c/fields/PhasingRecommendations__c.field-meta.xml
<CustomField>
    <fullName>PhasingRecommendations__c</fullName>
    <description>Unused</description>
    <inlineHelpText>Outline the phasing recommendations. Guidance on house views can be found in planner manual (Phasing).</inlineHelpText>
    <label>Phasing recommendations</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>