force-app/main/default/objects/AdviceChecklist__c/fields/PiecesOfFulfilmentAcceptedFromAbove__c.field-meta.xml
<CustomField>
    <fullName>PiecesOfFulfilmentAcceptedFromAbove__c</fullName>
    <description>Unused</description>
    <label>Pieces of fulfilment accepted from above</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>