force-app/main/default/objects/AdviceChecklist__c/fields/PiecesOfFulfilmentNotTakenUp__c.field-meta.xml
<CustomField>
    <fullName>PiecesOfFulfilmentNotTakenUp__c</fullName>
    <description>Unused</description>
    <label>Pieces of fulfilment not taken up</label>
    <type>TextArea</type>
</CustomField>