force-app/main/default/objects/AdviceChecklist__c/fields/PiecesOfFulfilmentRequiringAmendment__c.field-meta.xml
<CustomField>
    <fullName>PiecesOfFulfilmentRequiringAmendment__c</fullName>
    <description>Pieces of fulfilment requiring amendment following the meeting</description>
    <inlineHelpText>Pieces of fulfilment requiring amendment from above</inlineHelpText>
    <label>Pieces of fulfilment requiring amendment</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>