force-app/main/default/objects/AdviceChecklist__c/fields/PlannerCommentsNotes__c.field-meta.xml
<CustomField>
    <fullName>PlannerCommentsNotes__c</fullName>
    <description>Field to summarise changes you&#39;ve made to the narrative following the peer review. Any changes should be made within the narrative itself (i.e. you should overwrite where applicable). You can also outline here why you&#39;ve not made a change suggested in the peer review plus your reasoning.</description>
    <inlineHelpText>Use this field to summarise changes you&#39;ve made to the narrative following the peer review. Any changes should be made within the narrative itself (i.e. you should overwrite where applicable). You can also outline here why you&#39;ve not made a change suggested in the peer review plus your reasoning.</inlineHelpText>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>