force-app/main/default/objects/AdviceChecklist__c/fields/PlannerCommentsResolved__c.field-meta.xml
<CustomField>
    <fullName>PlannerCommentsResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Planner comments resolved?</label>
    <type>Checkbox</type>
</CustomField>