force-app/main/default/objects/AdviceChecklist__c/fields/PleaseProvideDetailBelow__c.field-meta.xml
<CustomField>
    <fullName>PleaseProvideDetailBelow__c</fullName>
    <description>Used to provide details of reasons for rejection of phasing details</description>
    <label>Please provide detail below</label>
    <type>TextArea</type>
</CustomField>