force-app/main/default/objects/AdviceChecklist__c/fields/PolicyTypesLoaBuilderCompleted__c.field-meta.xml
<CustomField>
    <fullName>PolicyTypesLoaBuilderCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>LOA builder completed and policy docs saved in google drive for all plans being advised on</inlineHelpText>
    <label>LOA builder complete &amp; policy docs saved</label>
    <type>Checkbox</type>
</CustomField>