force-app/main/default/objects/AdviceChecklist__c/fields/PolicyTypesProductsConsidered__c.field-meta.xml
<CustomField>
    <fullName>PolicyTypesProductsConsidered__c</fullName>
    <description>Unused</description>
    <inlineHelpText>What type of products are being specifically considered, reviewed or recommended in this suitability? Do not select DB pension unless we are giving DB transfer advice</inlineHelpText>
    <label>Products considered/reviewed/recommended</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defined Contribution Pension</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Defined Benefit Pension</fullName>
            </value>
            <value>
                <fullName>VCT</fullName>
            </value>
            <value>
                <fullName>EIS</fullName>
            </value>
            <value>
                <fullName>Trusts</fullName>
            </value>
            <value>
                <fullName>Protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>