force-app/main/default/objects/AdviceChecklist__c/fields/PostInSuitabilityDeckChannel__c.field-meta.xml
<CustomField>
    <fullName>PostInSuitabilityDeckChannel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Once content has been added to the &apos;Suitability Master - Updates pending approval&apos; deck, post into &apos;prod-suitability-deck&apos; channel on slack. These will be reviewed monthly and added to the Suitability master deck.</inlineHelpText>
    <label>Post in suitability deck channel</label>
    <type>Checkbox</type>
</CustomField>