force-app/main/default/objects/AdviceChecklist__c/fields/PostNewSlides__c.field-meta.xml
<CustomField>
    <fullName>PostNewSlides__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Post new slides</label>
    <type>Checkbox</type>
</CustomField>