force-app/main/default/objects/AdviceChecklist__c/fields/PrepDropboxLinkUsingLinkShortener__c.field-meta.xml
<CustomField>
    <fullName>PrepDropboxLinkUsingLinkShortener__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Refer to &#39;Send Dropbox Email&#39; task description.</inlineHelpText>
    <label>Prep Dropbox link using link shortener</label>
    <type>Checkbox</type>
</CustomField>