force-app/main/default/objects/AdviceChecklist__c/fields/ProtectionCalculator__c.field-meta.xml
<CustomField>
    <fullName>ProtectionCalculator__c</fullName>
    <defaultValue>&quot;https://docs.google.com/spreadsheets/d/1LcsLAIhC79AWbSxdCGkNMwmfb3tsjk5qaoFUQkWRXJA/edit#gid=1540160262&quot;</defaultValue>
    <label>Protection Calculator</label>
    <type>Url</type>
</CustomField>