force-app/main/default/objects/AdviceChecklist__c/fields/ProtectionProposalAdvice__c.field-meta.xml
<CustomField>
    <fullName>ProtectionProposalAdvice__c</fullName>
    <inlineHelpText>This section should be used to outline the review of and subsequent recommendations for clients&#39; existing protection policies.

New clients/proposals: high level summary of proposed policy types, levels, medical issues and justification based on completed needs analysis 
Recommendations: as above and also include detailed premiums, recommended provider, any deviations from our usual panel &amp; trusts.</inlineHelpText>
    <label>Protection Proposal/Advice</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>