force-app/main/default/objects/AdviceChecklist__c/fields/RecommendationsUpdatedInSalesforce__c.field-meta.xml
<CustomField>
    <fullName>RecommendationsUpdatedInSalesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records task completion</description>
    <label>Recommendations updated in Salesforce</label>
    <type>Checkbox</type>
</CustomField>