force-app/main/default/objects/AdviceChecklist__c/fields/RecommendedCashReserve__c.field-meta.xml
<CustomField>
    <fullName>RecommendedCashReserve__c</fullName>
    <inlineHelpText>Include details &amp; calculations, e.g. income shortfalls, adhoc spending, general reasoning and cash available for other advice. Guidance for house views can be found in planner manual (Cash reserve).</inlineHelpText>
    <label>Spending and saving</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>