force-app/main/default/objects/AdviceChecklist__c/fields/RecommendedInSpecieTransfers__c.field-meta.xml
<CustomField>
    <fullName>RecommendedInSpecieTransfers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Describes any recommended in specie transfers</description>
    <inlineHelpText>Are there any recommended in specie transfers?</inlineHelpText>
    <label>Recommended in-specie transfers?</label>
    <type>Checkbox</type>
</CustomField>