force-app/main/default/objects/AdviceChecklist__c/fields/RedactAddNewContentToPendingDeck__c.field-meta.xml
<CustomField>
    <fullName>RedactAddNewContentToPendingDeck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Add any new content created that may be useful to be made into a template and add to &apos;Suitability Master - Updates pending approval&apos; deck.</inlineHelpText>
    <label>Redact/add new content to pending deck</label>
    <type>Checkbox</type>
</CustomField>