force-app/main/default/objects/AdviceChecklist__c/fields/RegisteredParentForJisasJsipps__c.field-meta.xml
<CustomField>
    <fullName>RegisteredParentForJisasJsipps__c</fullName>
    <inlineHelpText>Who is the registered parent for any JISAs/JSIPPs being considered</inlineHelpText>
    <label>Registered Parent For JISAs/JSIPPs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>