force-app/main/default/objects/AdviceChecklist__c/fields/RequestedHubwiseAddToTheBuyList__c.field-meta.xml
<CustomField>
    <fullName>RequestedHubwiseAddToTheBuyList__c</fullName>
    <description>Unused</description>
    <inlineHelpText>If an asset can&#39;t be transferred, have you requested Hubwise add to the buy list?</inlineHelpText>
    <label>Requested Hubwise add to the buy list?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>