force-app/main/default/objects/AdviceChecklist__c/fields/RequiredEditsToMasterDeckFlagged__c.field-meta.xml
<CustomField>
    <fullName>RequiredEditsToMasterDeckFlagged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Any required edits to master deck flagged in #prod-suitability-deck on slack</inlineHelpText>
    <label>Required edits to master deck flagged</label>
    <type>Checkbox</type>
</CustomField>