force-app/main/default/objects/AdviceChecklist__c/fields/ResistanceToCatastrophe__c.field-meta.xml
<CustomField>
    <fullName>ResistanceToCatastrophe__c</fullName>
    <description>Describes clients risk circumstances</description>
    <label>Resistance to catastrophe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Higher</fullName>
            </value>
            <value>
                <fullName>In line</fullName>
            </value>
            <value>
                <fullName>Lower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>