force-app/main/default/objects/AdviceChecklist__c/fields/RiskCallNotes__c.field-meta.xml
<CustomField>
    <fullName>RiskCallNotes__c</fullName>
    <inlineHelpText>This should include all subheadings in risk discussion section on advice</inlineHelpText>
    <label>Risk Call Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>