force-app/main/default/objects/AdviceChecklist__c/fields/SaveIllustrationTo__c.field-meta.xml
<CustomField>
    <fullName>SaveIllustrationTo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Save Illustration To Portal Documents And Client Folder</inlineHelpText>
    <label>Save illustration to Google Drive</label>
    <type>Checkbox</type>
</CustomField>