force-app/main/default/objects/AdviceChecklist__c/fields/SendDropboxPasswordViaText__c.field-meta.xml
<CustomField>
    <fullName>SendDropboxPasswordViaText__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Refer to &apos;Send Dropbox Email&apos; task description.</inlineHelpText>
    <label>Send Dropbox password via text</label>
    <type>Checkbox</type>
</CustomField>