force-app/main/default/objects/AdviceChecklist__c/fields/SetupFeeInstructions__c.field-meta.xml
<CustomField>
    <fullName>SetupFeeInstructions__c</fullName>
    <description>Outline charge to be applied, include wrapper(s) it is to be deducted from and why, e.g. why SIPP &amp; not GIA/why not splitting between spouses. General guidance for setup fees can be found in planner manual under (fees &gt; initial advice set up fee)</description>
    <inlineHelpText>Outline charge to be applied, include wrapper(s) it is to be deducted from and why, e.g. why SIPP &amp; not GIA/why not splitting between spouses. General guidance for setup fees can be found in planner manual under (fees &gt; initial advice set up fee)</inlineHelpText>
    <label>Setup fee instructions</label>
    <type>TextArea</type>
</CustomField>