force-app/main/default/objects/AdviceChecklist__c/fields/SetupFulfilmentRecsActions__c.field-meta.xml
<CustomField>
    <fullName>SetupFulfilmentRecsActions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Fulfilment should also be set up for non standard recommendations, e.g. retaining products, updating EoWs, third party withdrawals.</inlineHelpText>
    <label>Setup recommendations</label>
    <type>Checkbox</type>
</CustomField>