force-app/main/default/objects/AdviceChecklist__c/fields/SnapshotTaken__c.field-meta.xml
<CustomField>
    <fullName>SnapshotTaken__c</fullName>
    <formula>NOT(ISBLANK(AdviceName__r.Profile_Snapshot__c))</formula>
    <inlineHelpText>You cannot tick this box manually, it&#39;ll automatically be ticked when snapshot is taken on advice.</inlineHelpText>
    <label>Snapshot taken?</label>
    <type>Checkbox</type>
</CustomField>