force-app/main/default/objects/AdviceChecklist__c/fields/SourceWealthFactAddedProfile__c.field-meta.xml
<CustomField>
    <fullName>SourceWealthFactAddedProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Has source of wealth fact been added to client profile?</inlineHelpText>
    <label>Source of wealth fact added to profile?</label>
    <type>Checkbox</type>
</CustomField>