force-app/main/default/objects/AdviceChecklist__c/fields/SpecialCircumstancesToBeConsidered__c.field-meta.xml
<CustomField>
    <fullName>SpecialCircumstancesToBeConsidered__c</fullName>
    <description>This section should be used to cover any information relevant to the advice not covered in other sections, e.g. client request review of Octopus shares (we have discounted due to conflict of interest), client moving overseas in near future, clients who may be under scope now but are expected to be within scope within the next 3 years etc.</description>
    <inlineHelpText>This section should be used to cover any information relevant to the advice not covered in other sections, e.g. client request review of Octopus shares (we have discounted due to conflict of interest), client moving overseas in near future, clients who may be under scope now but are expected to be within scope within the next 3 years etc.</inlineHelpText>
    <label>Special circumstances to be considered</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>